2007-11-10  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode): Set shell to bash.
	(eselect-mode): Ditto.
	(ebuild-commands-list): New variable, replaces previous alist.
	(ebuild-run-command): Use it.
	Add local variables block to declare utf-8 encoding.

2007-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-common-lisp):
	Add common-lisp-symlink-asdf, which will obsolete
	common-lisp-system-symlink.

2007-10-11  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-flag-o-matic): Added
	missing functions from marienz' ebuild-mode
	(ebuild-mode-commands-toolchain): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-fixheadtails): Added from marienz'
	ebuild-mode
	(ebuild-mode-commands-webapp): Added from marienz' ebuild-mode
	(ebuild-mode-commands-cvs): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-bash-completion): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-vim-plugin): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-multilib): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-64-bit): Added from marienz' ebuild-mode
	(ebuild-mode-commands-toolchain-funcs): Added missing functions
	from marienz' ebuild-mode
	(ebuild-mode-commands-games): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-subversion): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-python): Added missing functions from
	marienz' ebuild-mode
	(ebuild-mode-commands-check-kernel): Added from marienz'
	ebuild-mode
	(ebuild-mode-commands-distutils): Added from marienz' ebuild-mode
	(ebuild-mode-commands-depend-apache): Added from marienz' ebuild-mode
	(ebuild-mode-commands-apache-module): Added from marienz' ebuild-mode
	(ebuild-mode-commands-gnome2): Added from marienz' ebuild-mode
	added comment about deprecated eclasses
