@@ -1,3 +1,14 @@
+2007-11-11  Ulrich Mueller  <ulm@kph.uni-mainz.de>
+
+	* gentoo-syntax.el (ebuild-mode-get-keywords)
+	(ebuild-mode-put-keywords, ebuild-mode-sort-keywords)
+	(ebuild-mode-modify-keywords, ebuild-mode-keyword-stable)
+	(ebuild-mode-keyword-unstable, ebuild-mode-keyword-drop):
+	New functions for package keyword modification.
+	(ebuild-mode-arch-stable-list, ebuild-mode-arch-list)
+	(ebuild-mode-keywords-regexp): New variables.
+	(ebuild-mode-map): Keybindings for above.
+
 2007-11-10  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode): Set shell to bash.
